feat: CI/CD 파이프라인 구축

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,5 +28,5 @@ zupzup:
   auth:
     jwt:
       access:
-        secret: ${ACCESS_JWT_SECRET_KEY:accessFSFvPh5v9x3w+T8fA9gB7eC6dF3gH5jJ2kL4mN1oP0rS1c}
+        secret: ${ACCESS_TOKEN_SECRET_KEY:accessFSFvPh5v9x3w+T8fA9gB7eC6dF3gH5jJ2kL4mN1oP0rS1c}
         expiration-second: ${ACCESS_TOKEN_EXPIRATION:6000}  # 초 단위
